--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
 
   <div align="left" class="logo"> <a
-      href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#"><img src="free.jpeg"></a></div>
+      href="index.html#"><img src="free.jpeg"></a></div>
 
   <nav>
     <ul>
       <li><a href="#"><b>Home</b></a></li>
       <li><a href="#abc"><b>About Us</b></a></li>
-      <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/customer.html"><b>Customers</b></a>
+      <li><a href="customer.html"><b>Customers</b></a>
       </li>
-      <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/transferHistory.html"><b>Transfer
+      <li><a href="transferHistory.html"><b>Transfer
             History</b></a></li>
     </ul>
   </nav>
