--- a/singleCustomer.html
+++ b/singleCustomer.html
@@ -13,18 +13,17 @@
 </head>
 
 <body>
-    <div class="logo"><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#"><img
-                src="free.jpeg"></a></div>
+    <div class="logo"><a href="index.html#"><img src="free.jpeg"></a></div>
 
     </div>
     <nav>
         <ul>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#">Home</a></li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#abc">About Us</a>
+            <li><a href="index.html#">Home</a></li>
+            <li><a href="index.html#abc">About Us</a>
             </li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/customer.html">Customers</a>
+            <li><a href="customer.html">Customers</a>
             </li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/transferHistory.html"><b>Transfer
+            <li><a href="transferHistory.html"><b>Transfer
                         History</b></a></li>
         </ul>
     </nav>
@@ -63,7 +62,7 @@
 
     <div class="btn">
         <input id="amount" class="enter-amount" type="text" class="ammount" placeholder="Enter Amount">
-        
+
         <select id="transfer" name="Enter Amount" class="enter-customer">
             <option>Select Customer
             <option id="d0">
@@ -89,7 +88,7 @@
     <br>
     <br>
     <br>
-   
+
 
 </body>
 
