--- a/transferHistory.html
+++ b/transferHistory.html
@@ -9,18 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Priyesh Mishra">
     <link rel="stylesheet" type="text/css" href="transferHistory.css" </head> <body>
-    <div class="logo"><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#"><img
-                src="free.jpeg"></a></div>
+    <div class="logo"><a href="index.html#"><img src="free.jpeg"></a></div>
 
     </div>
     <nav>
         <ul>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#">Home</a></li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#abc">About Us</a>
+            <li><a href="index.html#">Home</a></li>
+            <li><a href="index.html#abc">About Us</a>
             </li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/customer.html">Customers</a>
+            <li><a href="customer.html">Customers</a>
             </li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/transferHistory.html"><b>Transfer
+            <li><a href="transferHistory.html"><b>Transfer
                         History</b></a></li>
         </ul>
     </nav>
