--- a/customer.html
+++ b/customer.html
@@ -11,18 +11,18 @@
 
 <body>
 
-    <div class="logo"><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#"><img
+    <div class="logo"><a href="index.html#"><img
                 src="free.jpeg"></a></div>
 
     </div>
     <nav>
         <ul>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#">Home</a></li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/index.html#abc">About Us</a>
+            <li><a href="index.html#">Home</a></li>
+            <li><a href="index.html#abc">About Us</a>
             </li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/customer.html">Customers</a>
+            <li><a href="customer.html">Customers</a>
             </li>
-            <li><a href="file:///home/pragyesh/Documents/workspace/basic-banking-system/transferHistory.html"><b>Transfer History</b></a></li>
+            <li><a href="transferHistory.html"><b>Transfer History</b></a></li>
         </ul>
     </nav>
     <h1 id="custom"> Customers Table Info</h1>
